[gd_scene load_steps=5 format=2]

[ext_resource path="res://content/gui/menus/MessengerAppMessages.gd" type="Script" id=1]
[ext_resource path="res://content/gui/menus/DebugMessengerIdleTrigger.gd" type="Script" id=2]
[ext_resource path="res://assets/gui/back_button.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Consolas.tres" type="DynamicFont" id=4]

[node name="MessengerAppMessages" type="Node2D"]
script = ExtResource( 1 )

[node name="DebugMessengerIdleTrigger" type="Node" parent="."]
script = ExtResource( 2 )
id = "tid_debug_idle_messenger"

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_right = 768.0
margin_bottom = 1408.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_right = 768.0
margin_bottom = 1365.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 748.0
margin_bottom = 1345.0
custom_constants/separation = 150

[node name="NameLabel" type="Label" parent="Background/MarginContainer/VBoxContainer"]
margin_right = 728.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "Contacts"

[node name="MessagesLabel" type="RichTextLabel" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 728.0
margin_bottom = 696.0
rect_min_size = Vector2( 0, 512 )
custom_fonts/mono_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 846.0
margin_right = 728.0
margin_bottom = 910.0
custom_constants/separation = 20

[node name="MessageButton" type="OptionButton" parent="Background/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 644.0
margin_bottom = 64.0
rect_min_size = Vector2( 644, 64 )
custom_fonts/font = ExtResource( 4 )
text = "Element 0"
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendButton" type="Button" parent="Background/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 664.0
margin_right = 728.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 1060.0
margin_right = 728.0
margin_bottom = 1188.0
rect_min_size = Vector2( 0, 128 )
icon = ExtResource( 3 )
expand_icon = true

[connection signal="item_selected" from="Background/MarginContainer/VBoxContainer/HBoxContainer/MessageButton" to="." method="_on_answer_selected"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/HBoxContainer/SendButton" to="." method="_on_SendButton_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
